# steelpark

./: .gitignore  README.md  rpi3.kiosk.md
gaussgame/: .gitignore  Dockerfile  Dockerfile.arm32v7  README.md  changelog.md  pyproject.toml  readme.md
gaussgame/docker-compose/: docker-compose.yaml  template.env
gaussgame/docker-compose/mosquitto/: mosquitto.conf
gaussgame/gaussgame/: bridge.py  context.py  playground.py
gaussgame/gaussgame/models/: settings.py
gaussgame/gaussgame/states/: error.py  play.py  results.py  state.py
gaussgame/tapgame/: bridge.py  context.py
gaussgame/tapgame/states/: get_ready.py
iot.corner/: docker-compose.yaml  readme.md  template.env  todo.md
iot.corner/app/: Dockerfile
iot.corner/app/src/: index.html
iot.corner/app/src/css/: style.css
iot.corner/app/src/js/: app.js  settings.js
iot.corner/mosquitto/: mosquitto.conf
iot.corner/nodered/: settings.js
iot.corner/nodered/projects/iotcorner/: .flows.json.backup  .flows_cred.json.backup  README.md  flows.json  flows_cred.json  package.json
iot.corner/tv.remote/: readme.md  requirements.txt  run.bash  template.env
iot.corner/tv.remote/remote/: main.py  models.py
iot.corner/z2m/: configuration.yaml  coordinator_backup.json  database.db  state.json
tapgame/: .gitignore  Dockerfile  Dockerfile.arm32v7  README.md  pyproject.toml
tapgame/docker-compose/: docker-compose.yaml
tapgame/docker-compose/mosquitto/: mosquitto.conf
tapgame/tapgame/: __main__.py  bridge.py  bridge2.py  context.py  gauss.py  helpers.py
tapgame/tapgame/models/: player.py  settings.py
tapgame/tapgame/states/: game_over.py  gauss.py  inactive.py  play.py  results.py  rules.py  start.py
